# multipanda_ros2

franka_bringup/config/: controllers.yaml  sim_controllers.yaml
franka_bringup/config/mujoco/: mj_objects.yaml
franka_bringup/launch/sim/: franka_sim.launch.py  multimode_sim.launch.py
franka_description/mujoco/custom/assets/objects/: door_w_revolute_lock.xml  door_with_prismatic_lock.xml
franka_description/mujoco/custom/assets/robots/: panda.xml  panda_nohand.xml
franka_description/mujoco/custom/assets/scenes/: panda_door_scene.xml
franka_description/mujoco/franka/: scene.xml
franka_description/robots/: hand.ros2_control.xacro  panda_arm_sim.urdf.xacro
franka_example_controllers/: CMakeLists.txt  package.xml
franka_example_controllers/include/franka_example_controllers/: cartesian_impedance_controller.hpp
franka_example_controllers/src/: cartesian_impedance_controller.cpp
franka_hardware/: CMakeLists.txt
franka_hardware/include/franka_hardware/: mujoco_visualizer.hpp
franka_hardware/src/: gripper_sim_action_server.cpp
franka_moveit_config/config/: kinematics.yaml  panda_controllers.yaml  panda_ros_controllers.yaml
franka_moveit_config/launch/: my_moveit.launch.py
franka_moveit_config/rviz/: moveit.rviz
franka_moveit_config/srdf/: group_definition.xacro  panda_arm.xacro  panda_arm_hand.xacro
moveit_reach_target/: CMakeLists.txt  package.xml
moveit_reach_target/src/: moveit_get_eefpose.cpp  moveit_reach_target.cpp  publish_trajectory.cpp  sim_reach_target.cpp
